--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <label for="dependencia" class="form-label">Selecciona la Dependencia:</label>
                 <select id="dependencia" class="form-select">
                     <option value="planeacion">Planeacion</option>
+                    <option value="coemere">Coemere</option>
                 </select>
             </div>
 
