--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
                 "vertical": "logos/planeacion-vertical.svg",
                 "completo": "logos/planeacion-completo.svg"
             },
-            "dependencia2": {
-                "horizontal": "logos/dependencia2-horizontal.svg",
-                "vertical": "logos/dependencia2-vertical.svg",
-                "completo": "logos/dependencia2-completo.svg"
+            "coemere": {
+                "horizontal": "logos/coemere-horizontal.svg",
+                "vertical": "logos/coemere-vertical.svg",
+                "completo": "logos/coemere-completo.svg"
             }
         };
 
