--- a/index.html
+++ b/index.html
@@ -6,40 +6,7 @@
     <title>Gestor de Logos</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            background-color: #f8f9fa;
-            font-family: 'Montserrat', sans-serif;
-        }
-        .container-custom {
-            background-color: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-        }
-        .btn-primary {
-            background-color: #621132;
-            border-color: #621132;
-        }
-        .btn-primary:hover {
-            background-color: #b38e5d;
-            border-color: #b38e5d;
-        }
-        .btn-outline-primary {
-            color: #621132;
-            border-color: #621132;
-        }
-        .btn-outline-primary:hover {
-            background-color: #621132;
-            color: white;
-        }
-        #logo-container {
-            border: 2px solid #621132;
-            padding: 15px;
-            border-radius: 8px;
-            background-color: #fdfdfd;
-        }
-    </style>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
@@ -89,83 +56,7 @@
             </div>
         </div>
     </div>
-
-    <script>
-        const logos = {
-            "dependencia1": {
-                "horizontal": "logos/dependencia1-horizontal.svg",
-                "vertical": "logos/dependencia1-vertical.svg",
-                "completo": "logos/dependencia1-completo.svg"
-            },
-            "dependencia2": {
-                "horizontal": "logos/dependencia2-horizontal.svg",
-                "vertical": "logos/dependencia2-vertical.svg",
-                "completo": "logos/dependencia2-completo.svg"
-            }
-        };
-
-        function mostrarLogo() {
-            const dependencia = document.getElementById("dependencia").value;
-            const modelo = document.getElementById("modelo").value;
-            const logoUrl = logos[dependencia][modelo];
-
-            document.getElementById("logo-container").innerHTML = `<img id="logo" src="${logoUrl}" alt="Logo" class="img-fluid" style="max-width: 300px;">`;
-        }
-
-        function ajustarProporcion() {
-            const img = document.getElementById("logo");
-            if (!img) return;
-            const height = document.getElementById("img-height").value;
-            const aspectRatio = img.naturalWidth / img.naturalHeight;
-        }
-
-        function descargarLogo(formato) {
-            const dependencia = document.getElementById("dependencia").value;
-            const modelo = document.getElementById("modelo").value;
-            const logoUrl = logos[dependencia][modelo];
-
-            const link = document.createElement("a");
-            link.href = logoUrl;
-            link.download = `logo-${dependencia}-${modelo}.${formato}`;
-            document.body.appendChild(link);
-            link.click();
-            document.body.removeChild(link);
-        }
-
-        function descargarComoImagen(formato) {
-            const img = document.getElementById("logo");
-            if (!img) {
-                alert("Primero selecciona y muestra un logo.");
-                return;
-            }
-
-            const svgURL = img.src;
-            const canvas = document.createElement("canvas");
-            const ctx = canvas.getContext("2d");
-
-            const height = parseInt(document.getElementById("img-height").value, 10) || 500;
-            const aspectRatio = img.naturalWidth / img.naturalHeight;
-            const width = Math.round(height * aspectRatio);
-
-            const svgImg = new Image();
-            svgImg.crossOrigin = "anonymous";
-            svgImg.src = svgURL;
-
-            svgImg.onload = function() {
-                canvas.width = width;
-                canvas.height = height;
-                ctx.drawImage(svgImg, 0, 0, width, height);
-
-                const link = document.createElement("a");
-                link.href = canvas.toDataURL(`image/${formato}`);
-                link.download = `logo.${formato}`;
-                document.body.appendChild(link);
-                link.click();
-                document.body.removeChild(link);
-            };
-        }
-    </script>
-    
+    <script src="js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
