correcion de nombres

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <div class="col-md-6">
                     <label for="dependencia" class="form-label">Selecciona la Dependencia:</label>
                     <select id="dependencia" class="form-select">
-                        <option value="dependencia1">Dependencia 1</option>
-                        <option value="dependencia2">Dependencia 2</option>
+                        <option value="planeacion">Planeación</option>
+                        <option value="coemere">Coemere</option>
                     </select>
                 </div>
 
