animacion de fondo agregada

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+ <!-- Fondo SVG Animado -->
+    <div id="background"></div>
     <div class="container mt-5">
         <div class="container-custom">
             <img src="logos/hidalgo-1.svg" alt="Logo" class="img-fluid mx-auto d-block mb-4" style="max-width: 250px;">
