--- a/index.html
+++ b/index.html
@@ -1,63 +1,76 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gestor de Logos</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Gestor de Logos</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
- <!-- Fondo SVG Animado -->
-    <div id="background"></div>
-    <div class="container mt-5">
-        <div class="container-custom">
-            <img src="logos/hidalgo-1.svg" alt="Logo" class="img-fluid mx-auto d-block mb-4" style="max-width: 250px;">
-            <h1 class="text-center mb-4">Gestor de Logos</h1>
-            <hr class="mb-4">
-            <div class="row g-3">
-                <div class="col-md-6">
-                    <label for="dependencia" class="form-label">Selecciona la Dependencia:</label>
-                    <select id="dependencia" class="form-select">
-                        <option value="planeacion">Planeación</option>
-                        <option value="coemere">Coemere</option>
-                    </select>
-                </div>
-
-                <div class="col-md-6">
-                    <label for="modelo" class="form-label">Selecciona el Modelo:</label>
-                    <select id="modelo" class="form-select">
-                        <option value="horizontal">Horizontal</option>
-                        <option value="vertical">Vertical</option>
-                        <option value="completo">Completo</option>
-                    </select>
-                </div>
-
-                <div class="col-12 text-center">
-                    <button class="btn btn-primary mt-3" onclick="mostrarLogo()">Ver Logo</button>
-                </div>
-            </div>
-
-            <div id="logo-container" class="mt-4 text-center">
-                <p class="text-muted">Aquí se mostrará el logo seleccionado.</p>
-            </div>
-
-            <div class="row mt-4 g-3">
-                <div class="col-md-6 text-center">
-                    <label for="img-height" class="form-label">Alto (px):</label>
-                    <input type="number" id="img-height" class="form-control w-50 mx-auto" value="500" min="100" oninput="ajustarProporcion()">
-                </div>
-                
-                <div class="col-md-6 text-center">
-                    <button class="btn btn-outline-primary me-2 mt-2" onclick="descargarLogo('svg')">Descargar SVG</button>
-                    <button class="btn btn-outline-danger me-2 mt-2" onclick="descargarComoImagen('png')">Descargar PNG</button>
-                    <button class="btn btn-outline-warning mt-2" onclick="descargarComoImagen('jpg')">Descargar JPG</button>
-                </div>
-            </div>
-        </div>
+  <!-- Fondo Animado -->
+  <div id="background"></div>
+  
+  <!-- Barra de navegación -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="#">Gestor de Logos</a>
     </div>
-    <script src="main.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  </nav>
+  
+  <!-- Contenedor principal -->
+  <div class="container my-5">
+    <div class="card shadow-lg mx-auto" style="max-width: 900px;">
+      <div class="card-body">
+        <div class="row">
+          <!-- Columna Izquierda: Configuración -->
+          <div class="col-md-6 border-end">
+            <div class="mb-3">
+              <label for="dependencia" class="form-label">Selecciona la Dependencia:</label>
+              <select id="dependencia" class="form-select">
+                <option value="planeacion">Planeación</option>
+                <option value="coemere">Coemere</option>
+              </select>
+            </div>
+            <div class="mb-3">
+              <label for="modelo" class="form-label">Selecciona el Modelo:</label>
+              <select id="modelo" class="form-select">
+                <option value="horizontal">Horizontal</option>
+                <option value="vertical">Vertical</option>
+                <option value="completo">Completo</option>
+              </select>
+            </div>
+            <div class="mb-3">
+              <button class="btn btn-primary w-100" onclick="mostrarLogo()">Ver Logo</button>
+            </div>
+            <div class="mb-3">
+              <label for="img-height" class="form-label">Alto (px):</label>
+              <input type="number" id="img-height" class="form-control" value="500" min="100" oninput="ajustarProporcion()">
+            </div>
+            <div class="mb-3">
+                <div class="d-grid gap-2">
+                    <button class="btn btn-outline-primary" onclick="descargarLogo('svg')">Descargar SVG</button>
+                    <button class="btn btn-outline-danger" onclick="descargarComoImagen('png')">Descargar PNG</button>
+                    <button class="btn btn-outline-warning" onclick="descargarComoImagen('jpg')">Descargar JPG</button>
+                    <button class="btn btn-outline-success" onclick="copiarImagen()">Copiar Imagen</button>
+                </div>
+            </div>
+          </div>
+          <!-- Columna Derecha: Previsualización -->
+          <div class="col-md-6 d-flex flex-column align-items-center justify-content-center">
+            <div id="logo-container" class="border p-3 w-100 d-flex justify-content-center align-items-center" style="min-height: 300px;">
+              <p class="text-muted m-0">Aquí se mostrará el logo seleccionado.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="toastContainer" class="toast-container position-fixed top-0 end-0 p-3"></div>
+  </div>
+
+  <!-- Scripts -->
+  <script src="main.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
