--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <div class="container my-5">
     <div class="card shadow-lg mx-auto" style="max-width: 900px;">
       <div class="card-body">
+        <img src="logos/hidalgo-1.svg" alt="Logo" class="img-fluid mb-3 mx-auto d-block" style="max-width: 250px;">
         <div class="row">
           <!-- Columna Izquierda: Configuración -->
           <div class="col-md-6 border-end">
