--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
               <select id="dependencia" class="form-select">
                 <option value="planeacion">Planeación</option>
                 <option value="coemere">Coemere</option>
+                <option value="gobierno">Sec. Gobierno</option>
+                <option value="obras">Sec. Obras Públicas</option>
+                <option value="oficialia">Oficialía Mayor</option>
               </select>
             </div>
             <div class="mb-3">
