Add Hidalgo logos to the logos object with horizontal and vertical formats

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <div class="mb-3">
               <label for="dependencia" class="form-label">Selecciona la Dependencia:</label>
               <select id="dependencia" class="form-select">
+                <option value="hidalgo">Hidalgo</option>
                 <option value="planeacion">Planeación</option>
                 <option value="coemere">Coemere</option>
                 <option value="gobierno">Sec. Gobierno</option>
@@ -75,6 +76,5 @@
 
   <!-- Scripts -->
   <script src="main.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
